<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginLeft="24dp"
       android:layout_marginRight="24dp"
       >

       <TextView
           android:id="@+id/tv_login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="60dp"
           android:textColor="#1E232C"
           android:textStyle="bold"
           android:textSize="36sp"
           android:text="Sign up"
           android:layout_gravity="center"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:text="When is your birthday?"
           android:textSize="18sp"
           android:textStyle="bold"
           android:textColor="#4E4D4D"
           android:paddingStart="8dp"
           android:layout_marginTop="40dp"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="16dp"
           >

           <NumberPicker
               android:id="@+id/numberPickerDay"
               android:layout_width="0dp"
               android:layout_height="56dp"
               android:layout_marginEnd="16dp"
               android:layout_weight="1"
               android:background="@drawable/spinner_dob"
               />

           <NumberPicker
               android:id="@+id/numberPickerMonth"
               android:layout_width="0dp"
               android:layout_height="56dp"
               android:layout_marginEnd="16dp"
               android:layout_weight="1"
               android:background="@drawable/spinner_dob"
               />

           <NumberPicker
               android:id="@+id/numberPickerYear"
               android:layout_width="0dp"
               android:layout_height="56dp"
               android:layout_weight="1"
               android:background="@drawable/spinner_dob"
               />
       </LinearLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="Your birthday won't be shown publicly"
           android:textSize="12sp"
           android:textColor="#9F9C9C"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:text="Email"
           android:textSize="18sp"
           android:textStyle="bold"
           android:textColor="#4E4D4D"
           android:paddingStart="8dp"
           android:layout_marginTop="30dp"
           />
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/til_name"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="12dp"
           android:hint=" "
           app:startIconDrawable="@drawable/email_icon"
           app:startIconTint="#0E0E0E"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/et_name"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/email_login"
               android:textColor="@color/black"
               android:inputType="textEmailAddress"
               android:hint="@string/enter_your_full_name"
               android:textColorHint="#686A6A"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/til_email"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="4dp"
           android:hint=" "
           app:startIconDrawable="@drawable/email_icon"
           app:startIconTint="#0E0E0E"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/et_email"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/email_login"
               android:textColor="@color/black"
               android:inputType="textEmailAddress"
               android:hint="@string/enter_email_address"
               android:textColorHint="#686A6A"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/til_occupation"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="4dp"
           android:hint=" "
           app:startIconDrawable="@drawable/email_icon"
           app:startIconTint="#0E0E0E"
           >
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/et_occupation"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/email_login"
               android:textColor="@color/black"
               android:inputType="text"
               android:hint="@string/enter_occupation"
               android:textColorHint="#686A6A"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/til_password"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="4dp"
           android:hint=" "
           app:startIconDrawable="@drawable/email_icon"
           app:startIconTint="#0E0E0E"
           app:endIconMode="password_toggle"
           app:endIconTint="#9A9595"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/et_pass"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/email_login"
               android:textColor="@color/black"
               android:inputType="numberPassword"
               android:hint="@string/enter_password"
               android:textColorHint="#686A6A"
               />
       </com.google.android.material.textfield.TextInputLayout>
       <android.widget.Button
           android:id="@+id/btn_sign_up"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/til_password"
           android:layout_marginTop="12dp"
           android:text="Next"
           android:textColor="@color/white"
           android:background="@drawable/continue_with_email"
           android:elevation="40dp"
           />
       <TextView
           android:id="@+id/tv_already_have"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_gravity="center"
           android:text="@string/already_have_an_account_login"
           android:textColor="@color/black"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_orLoginWith"
           />

   </LinearLayout>

</ScrollView>